--- a/html/index.html
+++ b/html/index.html
@@ -13,11 +13,22 @@
 
     <body>
         <div class="header">
-
+            <h1>Calculator</h1>
         </div>
 
         <div class="body">
-
+            <div class="calculator-container">
+                <button class="nine">9</button>
+                <button class="eight">8</button>
+                <button class="seven">7</button>
+                <button class="six">6</button>
+                <button class="five">5</button>
+                <button class="four">4</button>
+                <button class="three">3</button>
+                <button class="two">2</button>
+                <button class="one">1</button>
+                <button class="zero">0</button>
+            </div>
         </div>
 
         <div class="footer">
