Create calculator rough format

--- a/html/index.html
+++ b/html/index.html
@@ -13,21 +13,41 @@
 
     <body>
         <div class="header">
-            <h1>Calculator</h1>
+            <h2>Calculator</h2>
         </div>
 
         <div class="body">
+            <div class="display-container">
+                <div class="display">Type in an equation.</div>
+            </div>
             <div class="calculator-container">
-                <button class="nine">9</button>
-                <button class="eight">8</button>
-                <button class="seven">7</button>
-                <button class="six">6</button>
-                <button class="five">5</button>
-                <button class="four">4</button>
-                <button class="three">3</button>
-                <button class="two">2</button>
-                <button class="one">1</button>
-                <button class="zero">0</button>
+                <div class="first-row">
+                    <button class="divide">÷</button>
+                    <button class="nine">9</button>
+                    <button class="eight">8</button>
+                    <button class="seven">7</button>
+                </div>
+                <div class="second-row">
+                    <button class="multiply">x</button>
+                    <button class="six">6</button>
+                    <button class="five">5</button>
+                    <button class="four">4</button>
+                </div>
+                <div class="third-row">
+                    <button class="subtract">-</button>
+                    <button class="three">3</button>
+                    <button class="two">2</button>
+                    <button class="one">1</button>
+                </div>
+                <div class="fourth-row">
+                    <button class="add">+</button>
+                    <button class="equal">=</button>
+                    <button class="decimal">.</button>
+                    <button class="zero">0</button>
+                </div>
+                <div class="fifth-row">
+                    <button class="clear">Clear</button>
+                </div>
             </div>
         </div>
 
